codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_message_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› Test                                  "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"  tab 排队 · 计划模式   98% 上下文剩余  " Hidden by multi-width symbols: [(7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
