codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_short_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                              "
"› Test                        "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"  tab 排队发送消息 · 计划模式 " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (22, " "), (24, " "), (26, " "), (28, " ")]
